Improve the way we check if we are running on Google Colab

--- a/notebooks/magics.ipynb
+++ b/notebooks/magics.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "[[ ! -e /colabtools ]] && exit  # Run only if running on Google Colab\n",
+    "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
     "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "if os.path.exists('/colabtools'):\n",
+    "if 'COLAB_GPU' in os.environ:\n",
     "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
    ]
   },
@@ -79,8 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amplpy import AMPL, register_magics\n",
-    "import os, sys"
+    "from amplpy import AMPL, register_magics"
    ]
   },
   {
