--- a/notebooks/pattern_generation.ipynb
+++ b/notebooks/pattern_generation.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "[[ ! -e /colabtools ]] && exit  # Run only if running on Google Colab\n",
+    "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
     "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "if os.path.exists('/colabtools'):\n",
+    "if 'COLAB_GPU' in os.environ:\n",
     "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
    ]
   },
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imports"
+    "### Import and instantiate"
    ]
   },
   {
@@ -79,8 +79,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amplpy import AMPL\n",
-    "from math import floor"
+    "from amplpy import AMPL, register_magics\n",
+    "from math import floor\n",
+    "ampl = AMPL()\n",
+    "# Store %%ampl cells in the list _ampl_cells\n",
+    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
+    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
    ]
   },
   {
@@ -94,31 +98,22 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "param nPatterns integer > 0;\n",
-      "set PATTERNS = 1..nPatterns; # patterns\n",
-      "set WIDTHS; # finished widths\n",
-      "param order {WIDTHS} >= 0; # rolls of width j ordered\n",
-      "param overrun; # permitted overrun on any width\n",
-      "param rolls {WIDTHS,PATTERNS} >= 0 default 0; # rolls of width i in pattern j\n",
-      "\n",
-      "var Cut {PATTERNS} integer >= 0; # raw rolls to cut in each pattern\n",
-      "\n",
-      "minimize TotalRawRolls: sum {p in PATTERNS} Cut[p];\n",
-      "\n",
-      "subject to FinishedRollLimits {w in WIDTHS}:\n",
-      "  order[w] <= sum {p in PATTERNS} rolls[w,p] * Cut[p] <= order[w] + overrun;\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(os.path.join('models', 'cut.mod'), 'r') as f:\n",
-    "    print(f.read())"
+    "%%ampl_eval\n",
+    "param nPatterns integer > 0;\n",
+    "set PATTERNS = 1..nPatterns; # patterns\n",
+    "set WIDTHS; # finished widths\n",
+    "param order {WIDTHS} >= 0; # rolls of width j ordered\n",
+    "param overrun; # permitted overrun on any width\n",
+    "param rolls {WIDTHS,PATTERNS} >= 0 default 0; # rolls of width i in pattern j\n",
+    "\n",
+    "var Cut {PATTERNS} integer >= 0; # raw rolls to cut in each pattern\n",
+    "\n",
+    "minimize TotalRawRolls: sum {p in PATTERNS} Cut[p];\n",
+    "\n",
+    "subject to FinishedRollLimits {w in WIDTHS}:\n",
+    "  order[w] <= sum {p in PATTERNS} rolls[w,p] * Cut[p] <= order[w] + overrun;"
    ]
   },
   {
@@ -180,30 +175,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up AMPL model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize\n",
-    "ampl = AMPL()\n",
-    "ampl.read(os.path.join('models', 'cut.mod'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Send data to AMPL (Java/C++ style)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
