--- a/notebooks/pattern_tradeoff.ipynb
+++ b/notebooks/pattern_tradeoff.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "[[ ! -e /colabtools ]] && exit  # Run only if running on Google Colab\n",
+    "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
     "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "if os.path.exists('/colabtools'):\n",
+    "if 'COLAB_GPU' in os.environ:\n",
     "    os.environ['PATH'] += os.pathsep + '/content/ampl.linux-intel64'"
    ]
   },
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports"
+    "## Import and instantiate"
    ]
   },
   {
@@ -79,8 +79,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amplpy import AMPL\n",
-    "from math import floor"
+    "from amplpy import AMPL, register_magics\n",
+    "from math import floor\n",
+    "ampl = AMPL()\n",
+    "# Store %%ampl cells in the list _ampl_cells\n",
+    "# Evaluate %%ampl_eval cells with ampl.eval()\n",
+    "register_magics(store_name='_ampl_cells', ampl_object=ampl)"
    ]
   },
   {
@@ -94,89 +98,51 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "param roll_width > 0;\n",
-      "\n",
-      "set WIDTHS;\n",
-      "param orders {WIDTHS} > 0;\n",
-      "\n",
-      "param nPAT integer >= 0;\n",
-      "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
-      "\n",
-      "var Cut {1..nPAT} integer >= 0;\n",
-      "\n",
-      "minimize Number:\n",
-      "   sum {j in 1..nPAT} Cut[j];\n",
-      "minimize Waste:\n",
-      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
-      "\n",
-      "subj to Fulfill {i in WIDTHS}:\n",
-      "   sum {j in 1..nPAT} nbr[i,j] * Cut[j] >= orders[i];\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(os.path.join('models', 'cutRev1.mod'), 'r') as f:\n",
-    "    print(f.read())"
+    "%%ampl_eval\n",
+    "param roll_width > 0;\n",
+    "\n",
+    "set WIDTHS;\n",
+    "param orders {WIDTHS} > 0;\n",
+    "\n",
+    "param nPAT integer >= 0;\n",
+    "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
+    "\n",
+    "var Cut {1..nPAT} integer >= 0;\n",
+    "\n",
+    "minimize Number:\n",
+    "   sum {j in 1..nPAT} Cut[j];\n",
+    "minimize Waste:\n",
+    "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
+    "\n",
+    "subj to Fulfill {i in WIDTHS}:\n",
+    "   sum {j in 1..nPAT} nbr[i,j] * Cut[j] >= orders[i];"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "param roll_width := 64.5;\n",
-      "\n",
-      "param: WIDTHS: orders :=\n",
-      "         6.77    10\n",
-      "         7.56    40\n",
-      "        17.46    33\n",
-      "        18.76    10 ;\n",
-      "\n",
-      "param nPAT := 9 ;\n",
-      "\n",
-      "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
-      "     6.77   0  1  1  0  3  2  0  1  4\n",
-      "     7.56   1  0  2  1  1  4  6  5  2\n",
-      "    17.46   0  1  0  2  1  0  1  1  1\n",
-      "    18.76   3  2  2  1  1  1  0  0  0 ;\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open(os.path.join('models', 'cutRev1.dat'), 'r') as f:\n",
-    "    print(f.read())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Set up AMPL model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize\n",
-    "ampl = AMPL()\n",
-    "ampl.option['solver'] = 'gurobi'\n",
-    "ampl.read(os.path.join('models', 'cutRev1.mod'))\n",
-    "ampl.readData(os.path.join('models', 'cutRev1.dat'))"
+    "%%ampl_eval\n",
+    "data;\n",
+    "param roll_width := 64.5;\n",
+    "\n",
+    "param: WIDTHS: orders :=\n",
+    "         6.77    10\n",
+    "         7.56    40\n",
+    "        17.46    33\n",
+    "        18.76    10 ;\n",
+    "\n",
+    "param nPAT := 9 ;\n",
+    "\n",
+    "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
+    "     6.77   0  1  1  0  3  2  0  1  4\n",
+    "     7.56   1  0  2  1  1  4  6  5  2\n",
+    "    17.46   0  1  0  2  1  0  1  1  1\n",
+    "    18.76   3  2  2  1  1  1  0  0  0 ;"
    ]
   },
   {
@@ -188,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -205,6 +171,7 @@
     }
    ],
    "source": [
+    "ampl.option['solver'] = 'gurobi'\n",
     "ampl.eval('objective Number; solve;')\n",
     "ampl.display('Number', 'Waste')"
    ]
@@ -218,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +210,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Reset session in order to load a new model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ampl.reset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Roll Cutting - Revision 2"
    ]
   },
@@ -250,78 +233,60 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "param roll_width > 0;\n",
-      "param over_lim integer >= 0;\n",
-      "\n",
-      "set WIDTHS;\n",
-      "param orders {WIDTHS} > 0;\n",
-      "\n",
-      "param nPAT integer >= 0;\n",
-      "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
-      "\n",
-      "var Cut {1..nPAT} integer >= 0;\n",
-      "\n",
-      "minimize Number:\n",
-      "   sum {j in 1..nPAT} Cut[j];\n",
-      "minimize Waste:\n",
-      "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
-      "\n",
-      "subj to Fulfill {i in WIDTHS}:\n",
-      "   orders[i] <= sum {j in 1..nPAT} nbr[i,j] * Cut[j] <= orders[i] + over_lim;\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(os.path.join('models', 'cutRev2.mod'), 'r') as f:\n",
-    "    print(f.read())"
+    "%%ampl_eval\n",
+    "param roll_width > 0;\n",
+    "param over_lim integer >= 0;\n",
+    "\n",
+    "set WIDTHS;\n",
+    "param orders {WIDTHS} > 0;\n",
+    "\n",
+    "param nPAT integer >= 0;\n",
+    "param nbr {WIDTHS,1..nPAT} integer >= 0;\n",
+    "\n",
+    "var Cut {1..nPAT} integer >= 0;\n",
+    "\n",
+    "minimize Number:\n",
+    "   sum {j in 1..nPAT} Cut[j];\n",
+    "minimize Waste:\n",
+    "   sum {j in 1..nPAT} Cut[j] * (roll_width - sum {i in WIDTHS} i * nbr[i,j]);\n",
+    "\n",
+    "subj to Fulfill {i in WIDTHS}:\n",
+    "   orders[i] <= sum {j in 1..nPAT} nbr[i,j] * Cut[j] <= orders[i] + over_lim;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "param roll_width := 64.5;\n",
-      "param over_lim := 10 ;\n",
-      "\n",
-      "param: WIDTHS: orders :=\n",
-      "         6.77    10\n",
-      "         7.56    40\n",
-      "        17.46    33\n",
-      "        18.76    10 ;\n",
-      "\n",
-      "param nPAT := 9 ;\n",
-      "\n",
-      "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
-      "     6.77   0  1  1  0  3  2  0  1  4\n",
-      "     7.56   1  0  2  1  1  4  6  5  2\n",
-      "    17.46   0  1  0  2  1  0  1  1  1\n",
-      "    18.76   3  2  2  1  1  1  0  0  0 ;\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "with open(os.path.join('models', 'cutRev2.dat'), 'r') as f:\n",
-    "    print(f.read())"
+    "%%ampl_eval\n",
+    "data;\n",
+    "param roll_width := 64.5;\n",
+    "param over_lim := 10 ;\n",
+    "\n",
+    "param: WIDTHS: orders :=\n",
+    "         6.77    10\n",
+    "         7.56    40\n",
+    "        17.46    33\n",
+    "        18.76    10 ;\n",
+    "\n",
+    "param nPAT := 9 ;\n",
+    "\n",
+    "param nbr:  1  2  3  4  5  6  7  8  9 :=\n",
+    "     6.77   0  1  1  0  3  2  0  1  4\n",
+    "     7.56   1  0  2  1  1  4  6  5  2\n",
+    "    17.46   0  1  0  2  1  0  1  1  1\n",
+    "    18.76   3  2  2  1  1  1  0  0  0 ;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Set up AMPL model & initial solve"
+    "### Initial solve"
    ]
   },
   {
@@ -340,12 +305,7 @@
     }
    ],
    "source": [
-    "# Initialize\n",
-    "ampl = AMPL()\n",
     "ampl.option['solver'] = 'gurobi'\n",
-    "ampl.read(os.path.join('models', 'cutRev2.mod'))\n",
-    "ampl.readData(os.path.join('models', 'cutRev2.dat'))\n",
-    "\n",
     "ampl.eval('objective Number; solve;')\n",
     "min_number = ampl.getValue('Number')\n",
     "min_numwaste = ampl.getValue('Waste')\n",
