--- a/notebooks/pattern_tradeoff.ipynb
+++ b/notebooks/pattern_tradeoff.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "GitHub Repository: https://github.com/ampl/amplpy\n",
     "\n",
-    "PyPI Repository: https://pypi.python.org/pypi/amplpy"
+    "PyPI Repository: https://pypi.python.org/pypi/amplpy\n",
+    "\n",
+    "Jupyter Notebooks: https://github.com/ampl/amplpy/tree/master/notebooks"
    ]
   },
   {
@@ -47,11 +49,14 @@
     "%%bash\n",
     "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
-    "#!curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
+    "# You can install a demo bundle with all solvers: \n",
+    "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
+    "# Or pick individual modules (recommended in order to reduce disk usage):\n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
     "curl -O https://portal.ampl.com/dl/modules/gurobi-module.linux64.tgz && tar xzf gurobi-module.linux64.tgz\n",
     "cd ampl.linux-intel64 && pwd\n",
-    "#LICENSE_UUID=\n",
+    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
+    "LICENSE_UUID=\n",
     "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
    ]
   },
