Add note about deleting license UUID

--- a/notebooks/quickstart.ipynb
+++ b/notebooks/quickstart.ipynb
@@ -66,15 +66,16 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
+    "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
     "# You can install a demo bundle with all solvers: \n",
     "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
     "# Or pick individual modules (recommended in order to reduce disk usage):\n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
-    "curl -O https://portal.ampl.com/dl/modules/gurobi-module.linux64.tgz && tar xzf gurobi-module.linux64.tgz\n",
+    "curl -O https://portal.ampl.com/dl/modules/coin-module.linux64.tgz && tar xzf coin-module.linux64.tgz\n",
     "cd ampl.linux-intel64 && pwd\n",
     "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
+    "# Note: Please make sure you delete the license UUID before sharing a notebook with anyone\n",
     "LICENSE_UUID=\n",
     "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
    ]
