--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "test ! -z \"$COLAB_GPU\" || exit 0  # Run only if running on Google Colab\n",
+    "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
     "rm -rf ampl.linux-intel64\n",
     "# You can install a demo bundle with all solvers: \n",
     "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
@@ -56,6 +56,7 @@
     "curl -O https://portal.ampl.com/dl/modules/coin-module.linux64.tgz && tar xzf coin-module.linux64.tgz\n",
     "cd ampl.linux-intel64 && pwd\n",
     "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
+    "# Note: Please make sure you delete the license UUID before sharing a notebook with anyone\n",
     "LICENSE_UUID=\n",
     "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
    ]
@@ -291,19 +292,19 @@
       "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.004279 seconds\n",
+      "0 nodes, 3 iterations, 0.004392 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002447 seconds\n",
+      "0 nodes, 0 iterations, 0.002594 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.003445 seconds\n",
+      "0 nodes, 0 iterations, 0.003695 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.00398 seconds\n",
+      "0 nodes, 6 iterations, 0.004167 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
@@ -328,7 +329,7 @@
       ";\n",
       "\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
-      "0 nodes, 0 iterations, 0.003461 seconds\n",
+      "0 nodes, 0 iterations, 0.003845 seconds\n",
       "Cut [*] :=\n",
       "1   1\n",
       "2   0\n",
