Improve google colab cells

--- a/notebooks/colab.ipynb
+++ b/notebooks/colab.ipynb
@@ -48,22 +48,38 @@
    "source": [
     "%%bash\n",
     "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
+    "test ! -f ampl.installed || exit 0  # Run only once\n",
     "rm -rf ampl.linux-intel64\n",
-    "# You can install a demo bundle with all solvers: \n",
-    "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz \n",
+    "# You can install a demo bundle with all solvers:\n",
+    "#   curl -O https://portal.ampl.com/dl/amplce/ampl.linux64.tgz && tar xzf ampl.linux64.tgz\n",
     "# Or pick individual modules (recommended in order to reduce disk usage):\n",
     "curl -O https://portal.ampl.com/dl/modules/ampl-module.linux64.tgz && tar xzf ampl-module.linux64.tgz\n",
     "curl -O https://portal.ampl.com/dl/modules/coin-module.linux64.tgz && tar xzf coin-module.linux64.tgz\n",
-    "cd ampl.linux-intel64 && pwd\n",
-    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
-    "# Note: Please make sure you delete the license UUID before sharing a notebook with anyone\n",
-    "LICENSE_UUID=\n",
-    "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic"
+    "cp ampl.linux-intel64/ampl.lic ampl.linux-intel64/ampl.lic.demo\n",
+    "touch ampl.installed"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# If you have an AMPL Cloud License or an AMPL CE license, you can use it on Google Colab\n",
+    "# Note: Your license UUID should never be shared. Please make sure you delete the license UUID\n",
+    "# and rerun this cell before sharing the notebook with anyone\n",
+    "LICENSE_UUID=\n",
+    "test ! -z $COLAB_GPU || exit 0  # Run only if running on Google Colab\n",
+    "cd ampl.linux-intel64 && pwd\n",
+    "test -z $LICENSE_UUID && cp ampl.lic.demo ampl.lic  # Restore demo license in case LICENSE_UUID is empty\n",
+    "test ! -z $LICENSE_UUID && curl -O https://portal.ampl.com/download/license/$LICENSE_UUID/ampl.lic\n",
+    "./ampl -vvq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,19 +308,19 @@
       "CBC 2.10.5CBC 2.10.5 optimal, objective 52.1\n",
       "0 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 3 iterations, 0.004392 seconds\n",
+      "0 nodes, 3 iterations, 0.003685 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 50.5\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.2\n",
-      "0 nodes, 0 iterations, 0.002594 seconds\n",
+      "0 nodes, 0 iterations, 0.002649 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective -0.1\n",
-      "0 nodes, 0 iterations, 0.003695 seconds\n",
+      "0 nodes, 0 iterations, 0.003408 seconds\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 46.25\n",
       "1 iterations\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 0\n",
-      "0 nodes, 6 iterations, 0.004167 seconds\n",
+      "0 nodes, 6 iterations, 0.004242 seconds\n",
       "nbr [*,*] (tr)\n",
       ":  20  45  50  55  75    :=\n",
       "1   5   0   0   0   0\n",
@@ -329,7 +345,7 @@
       ";\n",
       "\n",
       "CBC 2.10.5CBC 2.10.5 optimal, objective 47\n",
-      "0 nodes, 0 iterations, 0.003845 seconds\n",
+      "0 nodes, 0 iterations, 0.003374 seconds\n",
       "Cut [*] :=\n",
       "1   1\n",
       "2   0\n",
